1. Refactored codes to improve ratings on Sonar Cloud